--- a/cadastro/app/clientes/cliente-detalhe.component.html
+++ b/cadastro/app/clientes/cliente-detalhe.component.html
@@ -1,6 +1,6 @@
 <div class="container"> 
     <h2>Salvar Cliente</h2>
-    <form #clienteForm="ngForm">
+    <form (ngSubmit)="onSubmit()" #clienteForm="ngForm">
         <div [ngClass]="getFormGroupClass(nome.valid,nome.pristine)">
             <label for="nome" class="form-control-label">Nome</label>
             <input type="text" placeholder="Informe o nome"
