--- a/cadastro/app/clientes/cliente-detalhe.component.html
+++ b/cadastro/app/clientes/cliente-detalhe.component.html
@@ -1,37 +1,31 @@
 <div class="container"> 
     <h2>Salvar Cliente</h2>
-    <form (ngSubmit)="onSubmit()" #clienteForm="ngForm">
-        <div [ngClass]="getFormGroupClass(nome.valid,nome.pristine)">
-            <label for="nome" class="form-control-label">Nome</label>
-            <input type="text" placeholder="Informe o nome"
-            [ngClass]="getFormControlClass(nome.valid,nome.pristine)"
-            required
-            #nome="ngModel"
+    <form (ngSubmit)="onSubmit()">
+        <div class="form-group">
+            <label for="nome">Nome</label>
+            <input type="text" placeholder="Informe o nome"         
+            class="form-control"   
+            required            
             name="nome"
-            [(ngModel)]="cliente.nome">
-            <div class="form-control-feedback" [hidden]="nome.valid || nome.pristine">O campo deve ser informado</div>            
+            [(ngModel)]="cliente.nome">            
         </div>
-        <div [ngClass]="getFormGroupClass(email.valid,email.pristine)">
-            <label for="email" class="form-control-label">Email</label>
+        <div class="form-group">
+            <label for="email">Email</label>
             <input type="email" placeholder="Informe o email"
-            [ngClass]="getFormControlClass(email.valid,email.pristine)"
-            required
-            #email="ngModel"
+            class="form-control"
+            required            
             name="email"
-            [(ngModel)]="cliente.email">       
-            <div class="form-control-feedback" [hidden]="email.valid || email.pristine">O campo deve ser informado</div>                 
+            [(ngModel)]="cliente.email">                   
         </div>
-        <div [ngClass]="getFormGroupClass(telefone.valid,telefone.pristine)">
-            <label for="telefone" class="form-control-label">Telefone</label>
+        <div class="form-group">
+            <label for="telefone">Telefone</label>
             <input type="text" placeholder="Informe o telefone"
-            [ngClass]="getFormControlClass(telefone.valid,telefone.pristine)"
-            required
-            #telefone="ngModel"
+            class="form-control"
+            required            
             name="telefone"
-            [(ngModel)]="cliente.telefone">    
-            <div class="form-control-feedback" [hidden]="telefone.valid || telefone.pristine">O campo deve ser informado</div>                    
+            [(ngModel)]="cliente.telefone">                
         </div>
-        <button type="submit" class="btn btn-success" [disabled]="!clienteForm.form.valid">Salvar</button>
+        <button type="submit" class="btn btn-success">Salvar</button>
         <a class="btn btn-secondary" routerLink="/">Voltar</a>
     </form>
 </div>
